Use data from ech23 and ech25 Little pore size change in half coat. Thick lines

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -46,9 +46,9 @@ Yet, in a biological context, thin tissues, e.g. epithelimum or endothelium, are
 Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Bremer1989} --this is a well-known effect used in cheese or yogurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimeter scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplemental Movies, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
 \begin{figure}[ht!]
-	\includegraphics{dynamics}
-	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w). (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectra of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}.}
-	\label{fig:dynamics}
+	\includegraphics{dynamics}%
+	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w). (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectra of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}.}%
+	\label{fig:dynamics}%
 \end{figure}
 
 The main goal of the present study is thus to identify the selection mechanism of the wavelength \seb{and to discuss its implication for practical situations (?)}. In the following we first describe the physical chemistry that allows us to form such patterns. Then we  model the situation and identify two possible selection mechanisms, namely porous Darcy flow or viscous Poiseuille flow. Comparing our experimental data to these two models we finally show that a combination of both Darcy and Poiseuille mechanisms accurately describes our data. This combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength.
@@ -57,14 +57,14 @@ The main goal of the present study is thus to identify the selection mechanism o
 \section*{Pattern formation}
 
 \begin{figure}[b]
-	\includegraphics{acidification}
-	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. The horizontal line indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a half-coated microscopy cell with no adhesion to top wall, syn\ae{}resis and swelling allowed.}
-	\label{fig:acidification}
+	\includegraphics{acidification}%
+	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. The horizontal line indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a slit geometry with either adhesion to all walls (black line) or no adhesion to top wall, i.e. allowed syn\ae{}resis and swelling (orange dashed line).}%
+	\label{fig:acidification}%
 \end{figure}
 
 %discuter la figure 1c
 
-The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation~\cite{Bremer1989} (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoelectric point makes the casein aggregates swell (Supplemental Fig.~\ref{fig:nonmonotonic}), thus weakening the gel~\cite{Braga2006}. In a microscopy cell of slit geometry coated so that the casein cannot adsorb on the top wall, this microscopic nonmonotonic behaviour translates into solvent expulsion out of the gel phase (syn\ae{}resis) followed by global swelling (Fig.~\ref{fig:acidification}c and Supplemental Fig.~\ref{fig:nonmonotonic}).
+The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation~\cite{Bremer1989} (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoelectric point makes the casein aggregates swell (Supplemental Fig.~\ref{fig:nonmonotonic}), thus weakening the gel~\cite{Braga2006}. In a microscopy cell of slit geometry coated so that the casein cannot adsorb on the top wall, this microscopic nonmonotonic behaviour translates into little variation of the pore size $\xi$ but to solvent expulsion out of the gel phase (syn\ae{}resis) followed by global swelling (Fig.~\ref{fig:acidification}c and Supplemental Fig.~\ref{fig:nonmonotonic}).
 
 
 
