transition au début de Models and scaling laws et résumé à la fin

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -80,7 +80,7 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 \section*{Models and scaling laws}
 
-\seb{\it Ajouter une transition: en l'etat le passage au modele est trop brutal.}
+Longitudinally constrained swelling of the gel film is the origin and driving force of the buckling instability. The gel area becomes in excess compared to the available area, thus the gel must fold. However, this does not explains how a wavelength is selected.
 
 The characteristic length $\lambda^*$ of a wrinkling pattern is set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$~\cite{Vella2009,Kolinski2009}: 
 \begin{equation}
@@ -91,6 +91,7 @@ For small deflections the actual wavelength $\lambda$ is related to $\lambda^*$ 
 
 % Pour Mathieu : ajouter quelque part des applications numériques pour les trois longueurs d'ondes gravité, Darcy, Poiseuille
 We identify three possible candidates for the transverse load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that the former plays no significant role by successfully repeating our experiment in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely.
+%Since the gel is almost buoyant with the surrounding medium, we expect that the weight plays no significant role, with an elasto-gravitational length at least centimetric. We confirmed this insight by successfully repeating our experiment in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely.
 
 \begin{figure*}
 	\includegraphics{Darcy_vs_Poiseuille}
@@ -117,13 +118,13 @@ A more complete derivation of the models can be found in the Supplementary Metho
 \end{align}
 where $1/H^3 = 1/H_1^3 + 1/H_2^3$. The crossover between the two models where $\lambda_D=\lambda_P$ is found for $H = H^* \equiv 2^{2/3} 3^{1/6} \alpha^{1/2} \Upsilon^{1/6}$.
 
-\seb{\it Resumer ce qui precede en une phrase disant dans quel domaine de longueur d'onde on s'attend a trouver quel scaling pour nos manips.}
+To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*$ the main dissipation mechanism would be the flow through the porous film, whereas for $H\gg H^*$ the flow in the viscous layers would dominate at set the wavelength.
 
 \section*{Experimental tests}
 
 The two above models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them (see Supplementary Method for details on such measurements). As summarized in Supplementary Table~\ref{tab:data} we systematically varied (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacted the gel stiffness, permeability and $\tau$. Finally, the only parameter that we had no control upon was the initial altitude $H$ of the gel before wrinkling that varied randomly. However we were able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the wavelength associated to the secondary blister is taken as half of that of the primary pattern as shown in Fig.~\ref{fig:dynamics}c.
 
-Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset \seb{(dashed line in Fig.~\ref{fig:DarcyPoiseuille}b)}. Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
+Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset (dashed line in Fig.~\ref{fig:DarcyPoiseuille}b). Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
 
 \seb{\it Ajouter une conclusion.}
 %optical elements ?
