--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -77,4 +77,11 @@
 	\label{fig:patterns}
 \end{figure*}
 
+\begin{figure}
+	\tikzsetnextfilename{generations}
+	\input{fig_plis/generations.pgf}%
+	\caption{Fourier spectra of binary altitudes of Fig.~\ref{fig:dynamics}a corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars is \SI{1}{\milli\metre}.}%
+	\label{fig:generations}%
+\end{figure}
+
 \end{document}
