Dernière équation du mémo correcte

--- a/2014_10_23_memo.tex
+++ b/2014_10_23_memo.tex
@@ -229,7 +229,7 @@ Thus the minimum $\tau$ is
 \end{equation}
 from which we express the wave number
 \begin{equation}
-\frac{2\time 12}{k^6} = H^3 h^3 \frac{B\tau_min}{\eta} = H^3 h^3  \Upsilon,
+\frac{2\times 12^2}{k^6} = H^3 h^3 \frac{B\tau_\text{min}}{\eta} = H^3 h^3  \Upsilon,
 \end{equation}
 which is the same as Eq.~(\ref{eq:Poiseuillek}).
 
